# QA_Auto_hw19

./: .gitignore  pyproject.toml
tests/: conftest.py
